--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,7 @@
 <!--pages/home/home.wxml-->
-<van-button type="primary">按钮</van-button>
-
-<view>你好</view>
+<van-search disabled shape="round" background="#fff" placeholder="请输入搜索关键词" />
+<swiper indicator-dots="{{true}}">
+  <swiper-item wx:for="{{banner}}" wx:key="id">
+  <image src="{{item.image_url}}" mode="widthFix"></image>
+  </swiper-item>
+</swiper>
