--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -1,1 +1,42 @@
-/* pages/user/user.wxss */
+.header {
+  background: #333333;
+  color: #fff;
+  padding: 40rpx 20rpx;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header image {
+  width: 150rpx;
+  border-radius: 50%;
+}
+.header .center {
+  flex: 1;
+  margin: auto 20rpx;
+}
+.myoverlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99999999;
+}
+.myoverlay .myoverlay_bg {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+.myoverlay .wrapper {
+  width: 90%;
+  padding: 20rpx;
+  background: #fff;
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.myoverlay .van-button {
+  margin-top: 20rpx;
+}
