--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,5 +1,6 @@
 <!--pages/home/home.wxml-->
-<van-search disabled shape="round" background="#fff" placeholder="请输入搜索关键词" />
+<van-search bindtap="goPopup" disabled shape="round" background="#fff" placeholder="请输入搜索关键词" />
+
 <swiper indicator-dots="{{true}}">
   <swiper-item wx:for="{{banner}}" wx:key="id">
   <image src="{{item.image_url}}" mode="widthFix"></image>
