--- a/components/product/product.wxml
+++ b/components/product/product.wxml
@@ -1,6 +1,6 @@
 <wxs src="../../utils/price.wxs" module="tool"></wxs>
 <view class="product">
-<view class="li" wx:for="{{goodsList}}" wx:key="id">
+<view class="li" wx:for="{{goodsList}}" wx:key="id" data-myid="{{item.id}}" bindtap="goDetails">
 <image mode="widthFix" src="{{item.list_pic_url}}"></image>
 <view class="title">{{item.name}}</view>
 <view class="price">{{tool.priceFilter(item.retail_price)}}</view>
