--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,25 @@
-<!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+<view class="cart_page">
+    <tips />
+
+    <van-checkbox-group value="{{result}}" custom-class="chx_group">
+        <block wx:for="{{cartList}}" wx:key="id">
+            <van-swipe-cell id="swipe-cell" right-width="{{ 65 }}" async-close bind:close="onClose">
+            <van-checkbox name="{{item.product_id}}"  disabled="{{!editStatus}}" bindtap="checkboxChange" data-pid="{{item.product_id}}">
+                <van-card num="{{item.number}}" price="{{item.retail_price}}" title="{{item.goods_name}}" thumb="{{item.list_pic_url}}">
+                    <view slot="footer" hidden="{{editStatus}}">
+                        <van-stepper value="{{item.number}}" min="1" integer data-item="{{item}}" bind:change="stepChange" />
+                    </view>
+                </van-card>
+            </van-checkbox>
+            <view slot="right" class="del"><van-button type="danger" bindtap="delGoodsFn" data-pid="{{item.product_id}}">删除</van-button></view>
+        </van-swipe-cell>
+        </block>
+    </van-checkbox-group>
+
+
+    <van-submit-bar bar-class="barclass" price="{{cartTotal.checkedGoodsAmount*100}}" button-text="立即购买" bind:submit="submitFn" tip="{{true}}">
+        <van-checkbox value="{{cartTotal.checkedGoodsCount===cartTotal.goodsCount}}" bind:change="selectAll" custom-class="selectAllcheckbox">全选</van-checkbox>
+        <view slot="tip">累计共{{cartTotal.goodsCount}}件商品，可点击<van-button type="{{editStatus?'primary':'danger'}}" size="small" bindtap="editStatus">{{editStatus?'编辑':'完成编辑'}}</van-button>按钮进行商品数量修改</view>
+    </van-submit-bar>
+
+</view>
